[gd_scene load_steps=4 format=3 uid="uid://mp5clejq580n"]

[ext_resource type="Script" path="res://modules/ui/pause_menu/pause_menu.gd" id="1_fim47"]
[ext_resource type="FontFile" uid="uid://bovqp5tife803" path="res://example_assets/font/PressStart2P.ttf" id="2_ivpfi"]
[ext_resource type="Script" path="res://modules/ui/ButtonPlus.gd" id="3_8tsmf"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fim47")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.364706)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_ivpfi")
text = "Pause"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_ivpfi")
text = "Return"
script = ExtResource("3_8tsmf")

[node name="SettingsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_ivpfi")
text = "Settings"
script = ExtResource("3_8tsmf")

[node name="ExitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_ivpfi")
text = "Exit
"
script = ExtResource("3_8tsmf")

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
